# GASmith

./: .gitignore  API_Summary.md  CMakeLists.txt  GASmith.cpp  GASmith.h  README.md  library.cpp  library.h
.github/workflows/: benchmarks.yml
benchmarks/: benchmark_basis.cpp  benchmark_blade.cpp  benchmark_dual.cpp  benchmark_inner.cpp  benchmark_involutions.cpp  benchmark_multivector.cpp  benchmark_signature.cpp  benchmark_signature.h  benchmark_versor.cpp  benchmark_wedge.cpp  ga_bench_init.cpp  ga_bench_memory.cpp  ga_bench_memory.h
benchmarks/results/: bench-Debug-2025-11-20.json
include/ga/: algebra.h  basis.h  e2.h  e3.h  linearMap.h  multivector.h  operators.h  policies.h  rotor.h  signature.h  storageDense.h  versor.h
include/ga/ops/: blade.h  dual.h  geometric.h  inner.h  involutions.h  wedge.h
tests/: test_dual.cpp  test_geometric_axioms.cpp  test_geometric_product.cpp  test_inner_product.cpp  test_involutions.cpp  test_versors.cpp  test_wedge_product.cpp
tools/: upload_benchmarks_to_influx.py
